# zenwave

./: .gitignore  AGENT.md  APPLE_BACKEND_STATUS.md  BROWSER_TEST_STATUS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml  release.yml  test.yml
docs/: android.md
examples/: basic_get.rs  custom_client.rs  websocket_echo.rs
scripts/: test-android-emulator.sh  test-apple.sh  test-native.sh  test-wasm.sh
src/: auth.rs  cache.rs  client.rs  cookie.rs  cookie_store.rs  error.rs  ext.rs  lib.rs  multipart.rs  oauth2.rs  proxy.rs  redirect.rs  retry.rs  tests.rs  timeout.rs  websocket.rs
src/backend/: apple.rs  curl.rs  hyper.rs  mod.rs  web.rs
src/client/: download.rs
src/tests/: auth_tests.rs  backend_tests.rs  client_tests.rs  convenience_tests.rs  error_tests.rs  integration_tests.rs  middleware_tests.rs
tests/: auth_tests.rs  backend_tests.rs  client_tests.rs  convenience_tests.rs  error_tests.rs  integration_tests.rs  middleware_tests.rs  redirect_tests.rs  retry_tests.rs  wasm_browser_tests.rs  websocket_tests.rs
tests/common/: mod.rs
