[package]
name = "zenwave"
version = "0.1.0"
edition = "2024"
authors = ["Lexo Liu<me@lexo.cool>"]
repository = "https://github.com/zen-rs/zenwave"
description = "Ergonomic HTTP client framework."
license = "MIT"
keywords = ["http", "client", "async", "networking", "middleware"]
categories = ["network-programming", "web-programming::http-client"]

[dependencies]
http-kit = { version = "0.2.0", git = "https://github.com/zen-rs/http-kit"}
executor-core = { version = "0.6.0" }
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_json = "1.0"
base64 = "0.22"
url = "2.5"
futures-util = "0.3"
futures-channel = "0.3"
thiserror = "1.0"

# Dependencies for hyper backend

hyper-util = { version = "0.1", default-features = false, optional = true }

hyper = { version = "1.8", features = ["client", "http1", "http2"], optional = true}
http-body-util = { version = "0.1.3", optional = true}
anyhow = "1.0.100"
js-sys = "0.3.82"
http = "1.3.1"
hyper-tls = { version = "0.6.0", optional = true }
curl = { version = "0.4", optional = true }
httpdate = "1.0"
eyre = "0.6.12"


[dev-dependencies]
serde_json = "1.0"
tempfile = "3.13"

[features]
default = ["hyper-backend", "web-backend"]
proxy-support = [
    "dep:hyper-util",
    "hyper-util/client",
    "hyper-util/client-proxy",
    "hyper-util/client-proxy-system",
]
hyper-backend = [
    "dep:hyper",
    "dep:http-body-util",
    "dep:hyper-tls",
    "proxy-support",
    "hyper-util/client-legacy",
    "hyper-util/http1",
    "hyper-util/http2",
    "hyper-util/tokio",
]
web-backend = []
apple-backend = []
curl-backend = ["dep:curl", "proxy-support"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "Headers",
    "ReadableStream",
    "Response",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType",
] }
wasm-streams = "0.4.2"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48", features = ["macros", "rt", "rt-multi-thread", "net", "fs", "io-util"] }
async-tungstenite = { version = "0.26", default-features = false, features = [
    "tokio-runtime",
    "tokio-native-tls",
] }
tokio-util = { version = "0.7", features = ["io"] }
async-fs = "1.6"
dirs = "5.0"
once_cell = "1.19"
time = "0.3"
tower-service = "0.3"

[target.'cfg(target_vendor = "apple")'.dependencies]
block = "0.1"
objc = "0.2"


[[example]]
name = "basic_get"
required-features = ["hyper-backend"]

[[example]]
name = "custom_client"
required-features = ["hyper-backend"]

[[example]]
name = "websocket_echo"
required-features = ["hyper-backend"]

[lints]
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.cargo = "warn"
