[package]
name = "zenwave"
version = "0.1.0"
edition = "2024"
authors = ["Lexo Liu<me@lexo.cool>"]
repository = "https://github.com/zen-rs/zenwave"
description = "Ergonomic HTTP client framework."
license = "MIT"
keywords = ["http", "client", "async", "networking", "middleware"]
categories = ["network-programming", "web-programming::http-client"]

[dependencies]
http-kit = { git = "https://github.com/zen-rs/http-kit"}
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_json = "1.0"
base64 = "0.22"
url = "2.5"
futures-util = "0.3"
futures-channel = "0.3"
thiserror = "1.0"
futures-io = "0.3"
async-lock = "3.4"
anyhow = "1.0.100"
js-sys = "0.3.82"
http = "1.3.1"
httpdate = "1.0"
eyre = "0.6.12"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.13"
async-std = { version = "1.13", features = ["attributes"] }

[features]
default = ["curl-backend"]
# TLS features - only one can be enabled at a time
native-tls = ["dep:async-native-tls", "dep:native-tls"]
rustls = [
    "dep:futures-rustls",
    "dep:rustls",
    "dep:webpki-roots",
    "dep:rustls-native-certs",
]
proxy = []
hyper-backend = [
    "dep:hyper",
    "dep:http-body-util",
]
apple-backend = []
curl-backend = ["dep:curl", "dep:blocking", "proxy"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "Headers",
    "ReadableStream",
    "Response",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType",
] }
wasm-streams = "0.4.2"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
gloo-timers = { version = "0.3", features = ["futures"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-io = "2.4"
async-net = "2.0"
blocking = { version = "1.6", optional = true }
curl = { version = "0.4", optional = true }
executor-core = { version = "0.7.0" }
hyper = { version = "1.8", default-features = false, features = ["client", "http1"], optional = true }
http-body-util = { version = "0.1.3", optional = true }
async-native-tls = { version = "0.5.0", optional = true, default-features = false }
futures-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = { version = "0.8", optional = true }
native-tls = { version = "0.2", optional = true }
webpki-roots = { version = "0.26", optional = true }
async-tungstenite = { version = "0.32.0", default-features = false, features = ["async-std-runtime", "async-tls"] }
async-fs = { version = "2.2.0", default-features = false }
dirs = "5.0"
once_cell = "1.19"
time = "0.3"
tower-service = "0.3"

[target.'cfg(target_vendor = "apple")'.dependencies]
block = "0.1"
objc = "0.2"


[[example]]
name = "basic_get"
required-features = ["hyper-backend"]

[[example]]
name = "custom_client"
required-features = ["hyper-backend"]

[[example]]
name = "websocket_echo"
required-features = ["hyper-backend"]

[lints]
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.cargo = "allow"
